--- a/Year 10/yr10subjects.html
+++ b/Year 10/yr10subjects.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Syllabus</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-item" href="">Lessons</a>
+            </li>
           </ul>
         </div>
       </nav>
