--- a/Year 7/yr7subjects.html
+++ b/Year 7/yr7subjects.html
@@ -19,13 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7homepage.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Subjects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Syllabus</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item" href="">Lessons</a>
             </li>
           </ul>
         </div>
