--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Year 9 lessons</a>
+        <a class="navbar-brand" href="#">Year 9 Lessons</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7homepage.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Subjects</a>
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item" href="">Lessons</a>
+                <a class="nav-link" href="#">Lessons</a>
             </li>
           </ul>
         </div>
