--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Year 7 Home Page</a>
+        <a class="navbar-brand" href="#">Year 7 Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Syllabus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-item" href="">Lessons</a>
+                <a class="nav-link" href="#">Lessons</a>
             </li>
           </ul>
         </div>
