--- a/Year 7/yr7syllabus.html
+++ b/Year 7/yr7syllabus.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item" href="">Lessons</a>
+                <a class="nav-link" href="#">Lessons</a>
             </li>
           </ul>
         </div>
