--- a/Year 7/yr7subjects.html
+++ b/Year 7/yr7subjects.html
@@ -22,13 +22,13 @@
               <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Subjects</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7subjects.html">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Syllabus</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7syllabus.html">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Lessons</a>
+                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7lessons.html#">Lessons</a>
             </li>
           </ul>
         </div>
