--- a/Year 8/yr8homepage.html
+++ b/Year 8/yr8homepage.html
@@ -12,23 +12,23 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Year 8 Homepage</a>
+        <a class="navbar-brand" href="#">Year 8 Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7homepage.html">Home</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Subjects</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8subjects.html">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Syllabus</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8syllabus.html">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Lessons</a>
+                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8lessons.html">Lessons</a>
             </li>
           </ul>
         </div>
