--- a/Year 9/yr9syllabus.html
+++ b/Year 9/yr9syllabus.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7homepage.html">Home</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Subjects</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9subjects.html">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Syllabus</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9syllabus.html">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Lessons</a>
+                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9lessons.html">Lessons</a>
             </li>
           </ul>
         </div>
