--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <h1 id="title">Acadepic</h1>
+  
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <a class="navbar-brand" href="#">Year 7 Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
