--- a/Year 9/yr9syllabus.html
+++ b/Year 9/yr9syllabus.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>9 Syllabus</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="yr9syllabus.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">Year 9 Syllabus</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#" style="font-size:25px;"><strong>Acadepic</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9homepage.html">Home</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9subjects.html">Subjects</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9subjects.html" style="color:#e3f2fd;">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9syllabus.html">Syllabus</a>
+              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9syllabus.html" style="color:#e3f2fd;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9lessons.html">Lessons</a>
+                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
           </ul>
         </div>
