--- a/loginpage.html
+++ b/loginpage.html
@@ -14,6 +14,7 @@
 
     <form id ="login">
         Enter Year Group: <input type="text" input="year group" value="7">
+        <input type="submit" value="submit">
 
 
     </form>
