--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/yr7homepage.html" style="color:#e3f2fd;">Home</a>
+              <a class="nav-link" href="Year 7/yr7homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7subjects.html" style="color:#e3f2fd;">Subjects</a>
