--- a/Year 8/yr8subjects.html
+++ b/Year 8/yr8subjects.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8homepage.html" style="color:#e3f2fd;">Home</a>
+              <a class="nav-link" href="yr8homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8subjects.html" style="color:#e3f2fd;">Subjects</a>
