--- a/Year 8/yr8homepage.html
+++ b/Year 8/yr8homepage.html
@@ -22,13 +22,13 @@
               <a class="nav-link" href="yr8homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8subjects.html" style="color:#e3f2fd;">Subjects</a>
+              <a class="nav-link" href="yr8subjects.html" style="color:#e3f2fd;">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8syllabus.html" style="color:#e3f2fd;">Syllabus</a>
+              <a class="nav-link" href="yr8syllabus.html" style="color:#e3f2fd;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%208/yr8lessons.html"style="color:#e3f2fd;">Lessons</a>
+                <a class="nav-link" href="yr8lessons.html"style="color:#e3f2fd;">Lessons</a>
             </li>
           </ul>
         </div>
