--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -22,13 +22,13 @@
               <a class="nav-link" href="yr7homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Subjects</a>
+              <a class="nav-link" href="yr7subjects.html" style="color:#e3f2fd;">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7syllabus.html" style="color:#e3f2fd;">Syllabus</a>
+              <a class="nav-link" href="yr7syllabus.html" style="color:#e3f2fd;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%207/yr7lessons.html#" style="color:#e3f2fd;">Lessons</a>
+                <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
           </ul>
         </div>
