--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9homepage.html" style="color:#e3f2fd;">Home</a>
+              <a class="nav-link" href="yr9homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9subjects.html" style="color:#e3f2fd;">Subjects</a>
+              <a class="nav-link" href="yr9subjects.html" style="color:#e3f2fd;">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9syllabus.html" style="color:#e3f2fd;">Syllabus</a>
+              <a class="nav-link" href="yr9syllabus.html" style="color:#e3f2fd;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%209/yr9lessons.html" style="color:#e3f2fd;">Lessons</a>
+                <a class="nav-link" href="yr9lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
           </ul>
         </div>
