--- a/loginpage.html
+++ b/loginpage.html
@@ -24,8 +24,18 @@
 
     </div>
 
-    <script>
-    
-    </script>
+    <script type="text/javascript">
+        <!--
+1       var input_year=Math.floor((Math.random()* 7)+1);
+2       switch(input_year){
+3         case 7:
+// put link here\\
+          case 8:
+          case 9:
+          case 10:
+8       }
+// http://www.informit.com/articles/article.aspx?p=1642671&seqNum=2 link for website\\
+
+      </script>
 </body>
 </html>
