--- a/loginpage.html
+++ b/loginpage.html
@@ -12,12 +12,12 @@
     <h1 id="title">Acadepic</h1>
     <br>
 
-    <form id ="login">
-        Enter Year Group: <input type="text" input="year group" value="7">
-
-
+    <form method="get" id="login">
+        Enter Year Group: <input id="input_year" type="text" maxlength="2" />
 
     </form>
+    <!--  Submit Button if u want <input type="submit" value="Submit" /> -->
+
     <div id="below">
         <h2>About us</h2>
         <p>Acadepic Website is a school learning based tool! We aim to teach students from year groups 7-10 about  Mathematics, Science and English. Within these three subects you will be able to go through the Syllabus of your chosen subject, go through lessons with video tutorials, go through practice tests in order to help develop your learning to allow you to develop as a student of ... as well as experience online learning at it's finest.</p>
@@ -25,15 +25,19 @@
     </div>
 
     <script type="text/javascript">
-        <!--
-1       var input_year=Math.floor((Math.random()* 7)+1);
-2       switch(input_year){
-3         case 7:
-// put link here\\
+        var input_year = document.getElementById("input_year").value;
+        switch(input_year){
+          case 7:
+            window.open('Year 7/yr7homepage.html')
           case 8:
+            window.open('Year 8/yr8homepage.html')
           case 9:
+            window.open('Year 9/yr9homepage.html')
           case 10:
-8       }
+            window.open('Year 10/yr10homepage.html')
+          default:
+            window.open('Year 10/yr10homepage.html')
+        }
 // http://www.informit.com/articles/article.aspx?p=1642671&seqNum=2 link for website\\
 
       </script>
