--- a/loginpage.html
+++ b/loginpage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <link rel="stylesheet" href="loginpage.css">
+    <link rel="stylesheet" href="loginpage.js">
 </head>
 <body>
     
@@ -24,18 +25,22 @@
 
     </div>
 
-    <script type="text/javascript">
-        <!--
-1       var input_year=Math.floor((Math.random()* 7)+1);
-2       switch(input_year){
-3         case 7:
+    <div> 
+        <script type="text/javascript">
+        
+
+1           var input_year=Math.floor((Math.random()* 7)+1);
+2           switch(input_year){
+3           case 7:
 // put link here\\
-          case 8:
-          case 9:
-          case 10:
-8       }
+            case 8:
+            case 9:
+            case 10:
+8           }
 // http://www.informit.com/articles/article.aspx?p=1642671&seqNum=2 link for website\\
 
       </script>
+</div>
+
 </body>
 </html>
