--- a/loginpage.html
+++ b/loginpage.html
@@ -13,15 +13,14 @@
     <nav class="navbar navbar-dark bg-primary justify-content-center">
       <span class="navbar-brand mb-0 h1"><b>Acadepic</b></span>
     </nav>
-
-        Enter Year Group: <input id="input_year" type="text" maxlength="2" />
-
-
+  
     <div id="below">
-        <h2>About us</h2>
-        <p>Acadepic Website is a school learning based tool! We aim to teach students from year groups 7-10 about  Mathematics, Science and English. Within these three subects you will be able to go through the Syllabus of your chosen subject, go through lessons with video tutorials, go through practice tests in order to help develop your learning to allow you to develop as a student of ... as well as experience online learning at it's finest.</p>
+      <h2>About us</h2>
+      <p>Acadepic Website is a school learning based tool! We aim to teach students from year groups 7-10 about  Mathematics, Science and English. Within these three subects you will be able to go through the Syllabus of your chosen subject, go through lessons with video tutorials, go through practice tests in order to help develop your learning to allow you to develop as a student of ... as well as experience online learning at it's finest.</p>
 
-    </div>
+  </div>
+    <div id="yeargroup" >Enter Year Group: <input id="input_year" type="text" maxlength="2" /></div>
+        
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
