--- a/loginpage.html
+++ b/loginpage.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Acadepic</title>
     <link rel="stylesheet" href="loginpage.css">
     <link rel="stylesheet" href="loginpage.js">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary justify-content-center">
-      <span class="navbar-brand mb-0 h1"><b>Acadepic</b></span>
+      <span id="title" class="navbar-brand mb-0 h1"><b>Acadepic</b></span>
     </nav>
   
     <div id="below">
-      <h2>About us</h2>
+      <h2>What's In Acadepic?</h2>
       <p>Acadepic Website is a school learning based tool! We aim to teach students from year groups 7-10 about  Mathematics, Science and English. Within these three subects you will be able to go through the Syllabus of your chosen subject, go through lessons with video tutorials, go through practice tests in order to help develop your learning to allow you to develop as a student of ... as well as experience online learning at it's finest.</p>
 
   </div>
-    <div id="yeargroup" >Enter Year Group: <input id="input_year" type="text" maxlength="2" /></div>
+    <div id="yeargroup">Enter Year Group: <input id="input_year" type="text" maxlength="2" /></div>
         
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -54,7 +54,6 @@
                   }
                 }
               }
-// // http://www.informit.com/articles/article.aspx?p=1642671&seqNum=2 link for website\\
 
       </script>
 </div>
