--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -28,6 +28,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
+            <!-- <li class="logout">
+              <a class="logouticon"  href="loginpage.html" style="color:#e3f2fd;">Logout</a>
+
+            </li> -->
+            <a id="logouticon" href="loginpage.html" class="btn btn-info btn-lg">
+              <span class="glyphicon glyphicon-log-out"></span> Log out
+            </a>
           </ul>
         </div>
     </nav>
