--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -28,21 +28,26 @@
             <li class="nav-item">
                 <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
-            <!-- <li class="logout">
-              <a class="logouticon"  href="loginpage.html" style="color:#e3f2fd;">Logout</a>
-
-            </li> -->
-            <a id="logouticon" href="loginpage.html" class="btn btn-info btn-lg">
-              <span class="glyphicon glyphicon-log-out"></span> Log out
-            </a>
-          </ul>
         </div>
     </nav>
+
+
     
     <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
+<br>
+  <div class="info"> 
+    <h4>What is in Acadepic?</h4>
+    <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
+      Mathematics, English and Science. We pride ourselves with the dedication 
+      and motivation we provide to our students as they develop new skills in 
+      their respective subjects. Our website features syllabus and lessons on 
+      the various subjects which include tutorials and practice tests to help 
+      our students grow and nurture their skills and abilities as they continue 
+      their educational journey. </p>
+  </div>    
 
- 
-    
+    <h4 class="info">Tutorial Video</h4>
+
 
 
 
