--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -34,7 +34,6 @@
 
     
     <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
-<br>
   <div class="info"> 
     <h4>What is in Acadepic?</h4>
     <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
@@ -48,6 +47,11 @@
 
     <h4 class="info">Tutorial Video</h4>
 
+  <div id="video">
+    <video width="320" height="240" controls>
+    <source src="time.mp4" type="video/mp4">
+    </video>
+  </div>
 
 
 
