--- a/loginpage.html
+++ b/loginpage.html
@@ -16,7 +16,13 @@
   
     <div id="below">
       <h2>What's In Acadepic?</h2>
-      <p>Acadepic Website is a school learning based tool! We aim to teach students from year groups 7-10 about  Mathematics, Science and English. Within these three subects you will be able to go through the Syllabus of your chosen subject, go through lessons with video tutorials, go through practice tests in order to help develop your learning to allow you to develop as a student of ... as well as experience online learning at it's finest.</p>
+      <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
+          Mathematics, English and Science. We pride ourselves with the dedication 
+          and motivation we provide to our students as they develop new skills in 
+          their respective subjects. Our website features syllabus and lessons on 
+          the various subjects which include tutorials and practice tests to help 
+          our students grow and nurture their skills and abilities as they continue 
+          their educational journey.</p>
 
   </div>
     <div id="yeargroup">Enter Year Group: <input id="input_year" type="text" maxlength="2" /></div>
