--- a/loginpage.html
+++ b/loginpage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="loginpage.js">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
+<body id="bd">
     <nav class="navbar navbar-dark bg-primary justify-content-center">
       <span id="title" class="navbar-brand mb-0 h1"><b>Acadepic</b></span>
     </nav>
