--- a/loginpage.html
+++ b/loginpage.html
@@ -16,7 +16,7 @@
   
     <div id="below">
       <h2>What's In Acadepic?</h2>
-      <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
+      <p>Here at Acadepic, we strive to empower a student’s academic prowess from <strong>7-10</strong> in 
           Mathematics, English and Science. We pride ourselves with the dedication 
           and motivation we provide to our students as they develop new skills in 
           their respective subjects. Our website features syllabus and lessons on 
@@ -52,6 +52,7 @@
                     window.location = 'Year 10/yr10homepage.html'
                     break
                   default:
+                  input_year.value="" 
                   Swal.fire(
                       'Wrong Input!',
                       'Enter a valid year group.',
