--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -41,6 +41,12 @@
       our students grow and nurture their skills and abilities as they continue 
       their educational journey. </p>
   </div>    
+ 
+  <div id="move">
+    <a href="yr7lessons.html"><button class="button button">English</button></a>
+    <a href="yr7lessons.html"><button class="button button">Mathematics</button></a>
+    <a href="yr7lessons.html"><button class="button button">Science</button></a>
+  </div>
 
     <h4 class="info">Tutorial Video</h4>
 
