--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -32,7 +32,16 @@
       </nav>
     
     <!-- Bootstrap -->
-
+  
+  <div id="move">  
+    <button class="eng-button">Display English</button>
+    <button class="math-button">Display Mathematics</button>
+    <button class="sci-button">Display Science</button>
+    <p class="eng-content"><strong>English</strong></p>
+    <p class="math-content"><strong>Mathematics</strong></p>
+    <p class="sci-content"><strong>Science</strong></p>
+    <script src="yr7lessons.js"></script>
+  </div>
 
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
