--- a/Year 8/yr8homepage.html
+++ b/Year 8/yr8homepage.html
@@ -11,25 +11,27 @@
     <link rel="stylesheet" href="yr8homepage.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#" style="font-size:25px;"><strong>Acadepic</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="yr8homepage.html" style="color:#e3f2fd;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="yr8syllabus.html" style="color:#e3f2fd;">Syllabus</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="yr8lessons.html"style="color:#e3f2fd;">Lessons</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-dark bg-primary justify-content-center">
+        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
       </nav>
+
+      <h2 id="welcome">Welcome To Acadepic Year 7 Homepage</h2>
+      <div class="info"> 
+        <h4>What is in Acadepic?</h4>
+        <p>Here at Acadepic, we strive to empower a student’s academic prowess in 
+          Mathematics, English and Science. We pride ourselves with the dedication 
+          and motivation we provide to our students as they develop new skills in 
+          their respective subjects. Our website features syllabus and lessons on 
+          the various subjects which include tutorials and practice tests to help 
+          our students grow and nurture their skills and abilities as they continue 
+          their educational journey. </p>
+      </div>    
+     
+      <div id="move">
+        <a href="yr8lessons.html"><button class="button button">English</button></a>
+        <a href="yr8lessons.html"><button class="button button">Mathematics</button></a>
+        <a href="yr8lessons.html"><button class="button button">Science</button></a>
+      </div>
     
     <!-- Bootstrap -->
 
