--- a/Year 7/yr7homepage.html
+++ b/Year 7/yr7homepage.html
@@ -9,13 +9,17 @@
     <link rel="stylesheet" href="yr7homepage.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+    <nav class="navbar navbar-dark bg-primary justify-content-center">
+        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
+      </nav>
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#" style="font-size:25px;"><strong>Acadepic</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNav"> -->
+          <!-- <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="yr7homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
@@ -24,7 +28,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Lessons</a>
-            </li>
+            </li> -->
         </div>
     </nav>
 
