--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -11,32 +11,16 @@
     <link rel="stylesheet" href="yr7lessons.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#" style="font-size:25px;"><strong>Acadepic</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="yr7homepage.html" style="color:#e3f2fd;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="yr7syllabus.html" style="color:#e3f2fd;">Syllabus</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="yr7lessons.html" style="color:#e3f2fd;">Lessons</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-dark bg-primary justify-content-center">
+        <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
       </nav>
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="yr7homepage.html" style="font-size:25px; text-align: center;"><strong>Acadepic</strong></a>
+      </nav> -->
     
     <!-- Bootstrap -->
   
   <div id="move">  
-    <!-- <button class="eng-button">Display English</button>
-    <button class="math-button">Display Mathematics</button>
-    <button class="sci-button">Display Science</button> -->
     <p class="eng-content"><div id="accordion">
       <div class="card">
         <div class="card-header" id="headingOne">
@@ -77,7 +61,7 @@
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
           <div class="card-body">
-            Topics
+            <b>Topics</b>
           </div>
         </div>
       </div>
