--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -11,24 +11,8 @@
     <link rel="stylesheet" href="yr9lessons.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#" style="font-size:25px;"><strong>Acadepic</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="yr9homepage.html" style="color:#e3f2fd;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="yr9syllabus.html" style="color:#e3f2fd;">Syllabus</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="yr9lessons.html" style="color:#e3f2fd;">Lessons</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-dark bg-primary justify-content-center">
+        <a id="title" class="navbar-brand mb-0 h1" href="yr9homepage.html"><b>Acadepic</b></a>
       </nav>
     
     <!-- Bootstrap -->
