--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -22,7 +22,7 @@
   
   <div id="move">  
     <p class="eng-content"><div id="accordion">
-      <div class="card">
+      <div class="card" >
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
             <button class="eng-button" class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -30,8 +30,10 @@
             </button>
           </h5>
         </div>
+
+      
     
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
             <b>Topics</b>
           </div>
@@ -66,8 +68,6 @@
         </div>
       </div>
     </div></p>
-    <!-- <p class="math-content"><strong>Mathematics</strong></p>
-    <p class="sci-content"><strong>Science</strong></p> -->
     <script src="yr7lessons.js"></script>
   </div>
 
