--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -35,7 +35,13 @@
     
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
-            <b>Topics</b>
+            <b>Literary</b>
+            <p style="margin-left: 20%; margin-right:20%;">Literary texts that support and extend students in Years 7 as independent
+               readers are drawn from a range of realistic, fantasy, speculative fiction
+                and historical genres and involve some challenging and unpredictable plot
+                 sequences and a range of non-stereotypical characters.</p>
+            <b>Vocabulary</b>
+            <p></p>
           </div>
         </div>
       </div>
