--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -30,9 +30,8 @@
             </button>
           </h5>
         </div>
-
       
-    
+
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
             <b>Literary</b>
@@ -40,6 +39,10 @@
                readers are drawn from a range of realistic, fantasy, speculative fiction
                 and historical genres and involve some challenging and unpredictable plot
                  sequences and a range of non-stereotypical characters.</p>
+
+                 <!--Insert video tutorial video of how to solve these problems into each lesson. 
+                  This will then lead off into tests which people wil be able to try-->
+
             <b>Vocabulary</b>
             <p style="margin-left: 20%; margin-right:20%;">Students will develop an understanding of a variety of words and 
               descriptions in which expand their Vocabulary index or dictionary. 
