--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -38,7 +38,7 @@
             <p style="margin-left: 20%; margin-right:20%;">Literary texts that support and extend students in Years 7 as independent
                readers are drawn from a range of realistic, fantasy, speculative fiction
                 and historical genres and involve some challenging and unpredictable plot
-                 sequences and a range of non-stereotypical characters.</p>
+                 sequences and a range of non-stereotypical characters. <br><a href="yr7eng.html">Online Tests</a></p>
 
                  <!--Insert video tutorial video of how to solve these problems into each lesson. 
                   This will then lead off into tests which people wil be able to try-->
@@ -47,7 +47,7 @@
             <p style="margin-left: 20%; margin-right:20%;">Students will develop an understanding of a variety of words and 
               descriptions in which expand their Vocabulary index or dictionary. 
               Allowing progressive learning ability and understanding of the use 
-              of different words. This will strengthen future responses students may write</p>
+              of different words. This will strengthen future responses students may write. <br> <a href="yr7eng.html">Online Tests</a></p>
           </div>
         </div>
       </div>
@@ -67,11 +67,11 @@
             <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to:</b> Compare fractions using equivalence.
               Multiply and divide fractions and decimals using efficient written 
               strategies and digital technologies. Round decimals to a specified 
-              number of decimal places</p>
+              number of decimal places <br><a href="yr7math.html">Online Tests</a></p>
             <b>Measurment</b>
             <p style="margin-left: 20%; margin-right:20%;"><b>Students learn to: </b>Calculate volumes of rectangular prisms.
                Perimeter and Circumference. Pythagoras' Theorm. Students will develop an understanding of a wide range of mathematical
-              equations. Allowing, them to solve challenging mathematical problems.
+              equations. Allowing, them to solve challenging mathematical problems.<br><a href="yr7math.html">Online Tests</a>
               </p>
           </div>
         </div>
@@ -89,6 +89,7 @@
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
           <div class="card-body">
             <b>Topics</b>
+            <p><a href="yr7sci.html">Online Tests</a></p>
           </div>
         </div>
       </div>
