--- a/Year 7/yr7sci.html
+++ b/Year 7/yr7sci.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>7 Mathematics</title>
+    <title>7 Science</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="yr7math.css">
+    <link rel="stylesheet" href="yr7sci.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
         <a id="title" class="navbar-brand mb-0 h1" href="yr7homepage.html"><b>Acadepic</b></a>
       </nav>
 
-      <h4 class="mid">Mathematics lessons</h4>
+      <h4 class="mid">Science Lessons</h4>
 
 
 
