--- a/Year 8/yr8lessons.html
+++ b/Year 8/yr8lessons.html
@@ -28,8 +28,12 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p><a href="yr8eng.html">Online Tests</a></p>
+                <b>Homophone</b>
+                <!--Discuss what is a the topics and what they are then the tests will be at the
+                bottom for the particpant to choose to go to in order to develop their learning.-->
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8eng.html">Online Tests</a></p>
+                <b>Vocabulary</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -45,8 +49,10 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <b>Topics</b>
-                <p><a href="yr8math.html">Online Tests</a></p>
+                <b>Numbers</b>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students learn to solve:</b> Decimals, Fractions & Percentage, Chance, Fractions & Mixed Numerals.<br><a href="yr8math.html">Online Tests</a></p>
+                <b>Measurement</b>
+                <p style="margin-left: 20%; margin-right:20%;"><br><a href="yr8math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -63,7 +69,7 @@
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
                 <b>Topics</b>
-                <p><a href="yr8sci.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr8sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
