--- a/Year 9/yr9lessons.html
+++ b/Year 9/yr9lessons.html
@@ -30,7 +30,7 @@
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
                 <b>Topics</b>
-                <p><a href="yr9eng.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9eng.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -47,7 +47,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
                 <b>Topics</b>
-                <p><a href="yr9math.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
                 <b>Topics</b>
-                <p><a href="yr9sci.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <br><a href="yr9sci.html">Online Tests</a></p>
               </div>
             </div>
           </div>
