--- a/Year 8/yr8lessons.html
+++ b/Year 8/yr8lessons.html
@@ -52,7 +52,7 @@
                 <b>Numbers</b>
                 <p style="margin-left: 20%; margin-right:20%;"> <b>Students learn to solve:</b> Decimals, Fractions & Percentage, Chance, Fractions & Mixed Numerals.<br><a href="yr8math.html">Online Tests</a></p>
                 <b>Measurement</b>
-                <p style="margin-left: 20%; margin-right:20%;"><br><a href="yr8math.html">Online Tests</a></p>
+                <p style="margin-left: 20%; margin-right:20%;"> <b>Students learn to solve:</b> Applications of Pythagoras’ Theorem, Circles: Area & Perimeter and Volume of Cylinders <br><a href="yr8math.html">Online Tests</a></p>
               </div>
             </div>
           </div>
